--- a/css/index.css
+++ b/css/index.css
@@ -822,7 +822,6 @@ transform:rotate(360deg); */
 }
 
 .ytitle2 {
-    padding-top: 50px;
     font-weight: bold;
     font-size: 50px;
     color: #1640d6;
@@ -1223,7 +1222,6 @@ transform:rotate(360deg); */
 }
 
 .event-details-container .title {
-    font-family: "Poppins";
     font-weight: 700;
     font-size: 4rem;
     font-size: 50px;
@@ -1596,7 +1594,7 @@ transform:rotate(360deg); */
     background-size: 1200px;
     background-blend-mode: exclusion ;
 }
-.osevents .card-smaller:hover {
+.osevents .card--smaller:hover {
     background-position-x: 620px;
     background-position-y: 450px;
     background-size: 1000px;
@@ -1612,16 +1610,28 @@ transform:rotate(360deg); */
     position: absolute;
     background-color: black;
     height: 100%;
-    /* width: 0; */
+    width: 100%;
     opacity: 0.4;
     z-index: 0;
     transition: .5s;
+}
+.osevents .layer--white{
+    position: absolute;
+    background-image: linear-gradient(90deg, rgba(253,253,255,1) 16%, rgba(89,89,93,1) 34%, rgba(14,14,14,1) 54%);
+    height: 100%;
+    /* opacity: 0; */
+    width: 0;
+    z-index: 0;
+    transition: .6s ;
+    left: 0;
+}
+.osevents .card:hover .layer--white {
+    width: 100%;
 }
 .osevents .text {
     padding: 20px;
     bottom: 10px;
     z-index: 2;
-    color: white;
     color: white;
     text-align: center;
     transition: .4s; 
@@ -1641,7 +1651,7 @@ transform:rotate(360deg); */
     margin: 0 10px;
     z-index: 3;
     color: #007bff;
-    transition: .6s;
+    transition: 1.3s;
 }
 .osevents .text .shadow {
     position: absolute;
@@ -1683,6 +1693,7 @@ transform:rotate(360deg); */
     opacity: 1;
     transform: translateX(-210px);
     position: relative;
+    /* color: black; */
 }
 
 .osevents .bt1 {
@@ -1710,36 +1721,10 @@ transform:rotate(360deg); */
     transform: translate(10px, 5px);
     z-index: -2;
 }
-
-.osevents .time {
-    background-color: white;
-    color: black;
-    position: absolute;
-    top: 7px;
-    left: 7px;
-    padding: 8px;
-    border-radius: 8px;
-    z-index: 2;
-    transition: .5s;
-    opacity: .8;
-}
-
-.osevents .card:hover .time {
-    opacity: .1;
-}
-
-.osevents .time p {
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-    font-weight: 600;
 }
 
 .osevents .card:hover .text {
     opacity: 1;
-}
-.osevents .card:hover .layer {
-    width: 100%;
 }
 
 @media (max-width:991px) {
