--- a/css/index.css
+++ b/css/index.css
@@ -180,7 +180,7 @@ nav ul li:nth-child(4) {
     margin-right: 60px;
 }
 
-@media (max-width:845px) {
+@media (max-width: 845px) {
     nav ul li:nth-child(4) {
         margin-right: 0;
     }
@@ -360,10 +360,10 @@ nav .icon span {
     nav ul a {
         font-size: 17px;
     }
+
     .header .container {
         width: 85%;
     }
-
 }
 
 @media (max-width: 855px) {
@@ -491,16 +491,18 @@ nav .icon span {
     }
 
     .header {
-        padding: 30px 15px;
-    }
-
-    .header .container {
-        width: 100%;
-    }
-
-    .header .container {
-        width: 100%;
         padding: 0;
+        top: 0;
+    }
+
+    .header .container {
+        width: 100%;
+        border-radius: 0;
+    }
+
+    .header .container {
+        width: 100%;
+        padding: 5px 2px;
     }
 }
 
@@ -571,7 +573,7 @@ nav .icon span {
 /* End intro Section */
 /* Start about Section */
 .bluecontainer {
-    background-image: linear-gradient(#5690FF, #1c61e0);
+    background-image: linear-gradient(#5690ff, #1c61e0);
     border-radius: 15px;
     padding: 20px;
     text-align: center;
@@ -636,7 +638,7 @@ nav .icon span {
     grid-column: span 2;
 }
 
-@media screen and (max-width:991px) {
+@media screen and (max-width: 991px) {
     .bluecontainer .cards {
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     }
@@ -740,7 +742,7 @@ nav .icon span {
 .a:hover i {
     color: rgb(0, 149, 255);
     /* transition: all 0.6s ;
-transform:rotate(360deg); */
+  transform:rotate(360deg); */
     transform: scale(-1) rotate(180deg);
     /* transition: all 0.5s ;  */
 }
@@ -765,7 +767,7 @@ transform:rotate(360deg); */
     filter: grayscale(1);
     /* transition: all 1s ease; */
 
-    border-radius: 40px;
+    border-radius: 20px;
     cursor: pointer;
     /* background-color: red; */
 }
@@ -815,13 +817,14 @@ transform:rotate(360deg); */
     filter: none;
 }
 
-.yasmeen-heads ul {
+/* .yasmeen-heads ul {
     text-decoration: none;
     display: flex;
     list-style: none;
-}
+  } */
 
 .ytitle2 {
+    padding-top: 50px;
     font-weight: bold;
     font-size: 50px;
     color: #1640d6;
@@ -832,14 +835,44 @@ transform:rotate(360deg); */
     position: relative;
 }
 
+.yasmeen-heads {
+    overflow: hidden;
+    width: 80%;
+    margin: auto;
+}
+
+.yasmeen-heads .heads-slides {
+    display: flex;
+    transition: all 0.5s;
+}
+
+.yasmeen-heads .filter {
+    flex: 0 0 25%;
+    touch-action: pan-y;
+}
+.yasmeen-heads .filter .himg {
+    min-width: 260px;
+}
+
+
+/* .yasmeen-heads .filter.active {
+    transform: translateX(0);
+  }
+  .yasmeen-heads .filter.prev {
+    transform: translateX(-100%);
+  }
+  .yasmeen-heads .filter.slide-out {
+    transform: translateX(100%);
+  } */
+
 /* .shapetri{
-   position: absolute;
-   left: 240px;
-   top: 15%;
-   z-index: -1;
-   
-   animation: round-01 5s linear infinite;
-} */
+     position: absolute;
+     left: 240px;
+     top: 15%;
+     z-index: -1;
+     
+     animation: round-01 5s linear infinite;
+  } */
 @keyframes round-01 {
     0% {
         transform: rotate(15deg);
@@ -856,10 +889,10 @@ transform:rotate(360deg); */
 
 .shapelines {
     /* position: absolute;
-   right: 10px;
-   bottom: 30%;
-   z-index: -1;
-   animation: round-01 5s linear infinite; */
+     right: 10px;
+     bottom: 30%;
+     z-index: -1;
+     animation: round-01 5s linear infinite; */
     display: none;
 }
 
@@ -913,7 +946,6 @@ transform:rotate(360deg); */
     }
 
     .yicons {
-
         flex-wrap: wrap;
         justify-content: space-evenly;
         align-items: center;
@@ -931,7 +963,6 @@ transform:rotate(360deg); */
     }
 
     .yicons li i {
-
         font-size: 30px;
     }
 
@@ -964,12 +995,9 @@ transform:rotate(360deg); */
 }
 
 @media screen and (max-width: 480px) {
-
     .yicons li {
         height: 120px;
     }
-
-
 }
 
 @media screen and (min-width: 601px) and (max-width: 1300px) {
@@ -984,7 +1012,7 @@ transform:rotate(360deg); */
     }
 
     .yicons li {
-        margin: 0px 10px;
+        margin: 10px 10px;
     }
 
     .shapecross {
@@ -1002,12 +1030,12 @@ transform:rotate(360deg); */
         padding: 0px;
     }
 
-    .yasmeen-heads {
-        display: flex;
-        text-align: center;
-        align-items: center;
-        justify-content: space-around;
-    }
+    /* .yasmeen-heads {
+      display: flex;
+      text-align: center;
+      align-items: center;
+      justify-content: space-around;
+    } */
 
     .yhide {
         display: none;
@@ -1034,9 +1062,11 @@ transform:rotate(360deg); */
 .announce .phone {
     position: relative;
 }
-.announce .content .text{
+
+.announce .content .text {
     margin-right: 20px;
 }
+
 .announce .content .text span {
     background: -webkit-linear-gradient(330deg, #1580c8, #7ac0d0);
     -webkit-background-clip: text;
@@ -1067,7 +1097,6 @@ transform:rotate(360deg); */
     left: 67px;
     top: 210px;
 }
-
 
 .announce .bt1 {
     font-size: 18px;
@@ -1222,6 +1251,7 @@ transform:rotate(360deg); */
 }
 
 .event-details-container .title {
+    font-family: "Poppins";
     font-weight: 700;
     font-size: 4rem;
     font-size: 50px;
@@ -1412,9 +1442,11 @@ transform:rotate(360deg); */
     padding: 60px 0;
     background-color: var(--section-grey);
 }
-.speakers .container{
+
+.speakers .container {
     /* width: 85%; */
 }
+
 .speakers .content {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -1437,7 +1469,7 @@ transform:rotate(360deg); */
     right: 10px;
     z-index: 2;
     opacity: 0;
-    transition: 1s .2s linear;
+    transition: 1s 0.2s linear;
 }
 
 .speakers .ico {
@@ -1472,7 +1504,7 @@ transform:rotate(360deg); */
     width: 0;
     opacity: 0.4;
     z-index: 1;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .speakers .time {
@@ -1484,12 +1516,12 @@ transform:rotate(360deg); */
     padding: 8px;
     border-radius: 8px;
     z-index: 2;
-    transition: .5s;
-    opacity: .8;
+    transition: 0.5s;
+    opacity: 0.8;
 }
 
 .speakers .card:hover .time {
-    opacity: .1;
+    opacity: 0.1;
 }
 
 .speakers .time p {
@@ -1507,7 +1539,7 @@ transform:rotate(360deg); */
     color: white;
     /* display: none; */
     opacity: 0;
-    transition: 1s .2s linear;
+    transition: 1s 0.2s linear;
 }
 
 .speakers .text h2 {
@@ -1525,7 +1557,7 @@ transform:rotate(360deg); */
 
 .speakers .card img {
     max-width: 100%;
-    transition-duration: .8s;
+    transition-duration: 0.8s;
     transition-timing-function: ease-in-out;
     z-index: 0;
 }
@@ -1551,11 +1583,10 @@ transform:rotate(360deg); */
     z-index: 0;
 }
 
-@media (max-width:991px) {
+@media (max-width: 991px) {
     .speakers .content {
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     }
-
 }
 
 /* End speakers Section */
@@ -1564,9 +1595,11 @@ transform:rotate(360deg); */
     padding: 60px 0;
     background-color: var(--section-grey);
 }
-.osevents .container{
+
+.osevents .container {
     width: 80%;
 }
+
 .osevents .content {
     display: grid;
     grid-template-columns: repeat(1, minmax(300px, 1fr));
@@ -1588,71 +1621,66 @@ transform:rotate(360deg); */
     overflow: hidden;
     transition: 1s;
 }
+
 .osevents .card:hover {
     background-position-x: 1200px;
     background-position-y: 500px;
     background-size: 1200px;
-    background-blend-mode: exclusion ;
+    background-blend-mode: exclusion;
 }
-.osevents .card--smaller:hover {
+
+.osevents .card-smaller:hover {
     background-position-x: 620px;
     background-position-y: 450px;
     background-size: 1000px;
+}
 
-}
 .osevents .card--bw:hover {
-    background-blend-mode:luminosity ;
+    background-blend-mode: luminosity;
 }
-.osevents .card--bw:hover .description  {
-    color: white ;
+
+.osevents .card--bw:hover .description {
+    color: white;
 }
+
 .osevents .layer {
     position: absolute;
     background-color: black;
     height: 100%;
-    width: 100%;
+    /* width: 0; */
     opacity: 0.4;
     z-index: 0;
-    transition: .5s;
+    transition: 0.5s;
 }
-.osevents .layer--white{
-    position: absolute;
-    background-image: linear-gradient(90deg, rgba(253,253,255,1) 16%, rgba(89,89,93,1) 34%, rgba(14,14,14,1) 54%);
-    height: 100%;
-    /* opacity: 0; */
-    width: 0;
-    z-index: 0;
-    transition: .6s ;
-    left: 0;
-}
-.osevents .card:hover .layer--white {
-    width: 100%;
-}
+
 .osevents .text {
     padding: 20px;
     bottom: 10px;
     z-index: 2;
     color: white;
+    color: white;
     text-align: center;
-    transition: .4s; 
+    transition: 0.4s;
 }
 
-.osevents .card:hover .shadow{
+.osevents .card:hover .shadow {
     transform: translatex(8px);
 }
 
-.osevents .text .title{
+.osevents .text .title {
     position: relative;
-    transition: .5s;
+    transition: 0.5s;
 }
+
 .osevents .text h2 {
     font-size: 3rem;
     font-weight: 600;
     margin: 0 10px;
     z-index: 3;
     color: #007bff;
-    transition: 1.3s;
+    transition: 0.6s;
 }
+
 .osevents .text .shadow {
     position: absolute;
     color: white;
@@ -1664,8 +1692,9 @@ transform:rotate(360deg); */
     z-index: 1;
     margin: 0 10px;
 }
-.osevents .card:hover .text .title h2{
-    transform: translate(-240px,-20px);
+
+.osevents .card:hover .text .title h2 {
+    transform: translate(-240px, -20px);
     cursor: pointer;
 }
 
@@ -1675,121 +1704,162 @@ transform:rotate(360deg); */
     font-size: 16px;
     color: rgba(255, 255, 255, 0.767);
     min-width: 400px;
-    transition: .6s;
+    transition: 0.6s;
 }
-.osevents .card:hover .text .title p{
-    transform: translate(-360px,-20px);
+
+.osevents .card:hover .text .title p {
+    transform: translate(-360px, -20px);
 }
-.osevents .text .description{
+
+.osevents .text .description {
     font-size: 13px;
     text-align: left;
     position: absolute;
     opacity: 0;
     transform: translateX(100px);
     max-width: 300px;
-    transition: .5s .2s ease-out;
+    transition: 0.5s 0.2s ease-out;
 }
-.osevents .card:hover .text .description{
+
+.osevents .card:hover .text .description {
     opacity: 1;
     transform: translateX(-210px);
     position: relative;
-    /* color: black; */
 }
 
 .osevents .bt1 {
     font-size: 14px;
     padding: 8px 20px;
     border-radius: 5px;
-    background-color: #7D0A0A;
+    background-color: #7d0a0a;
     border: 0;
     color: white;
     font-weight: 500;
     transition-duration: 0.7s;
     opacity: 0;
 }
+
 .osevents .bt1:hover {
     background-color: white;
     color: black;
     cursor: pointer;
 }
-.osevents .card:hover .bt1{
+
+.osevents .card:hover .bt1 {
     transform: translateX(-325px);
-    opacity: .8;
+    opacity: 0.8;
 }
+
 .osevents button:hover::before {
     cursor: default;
     transform: translate(10px, 5px);
     z-index: -2;
 }
+
+.osevents .layer--white {
+    position: absolute;
+    background-image: linear-gradient(90deg, rgba(253, 253, 255, 1) 16%, rgba(89, 89, 93, 1) 34%, rgba(14, 14, 14, 1) 54%);
+    height: 100%;
+    /* opacity: 0; */
+    width: 0;
+    z-index: 0;
+    transition: .6s;
+    left: 0;
+}
+
+.osevents .card:hover .layer--white {
+    width: 100%;
+}
+
+.osevents .time p {
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .osevents .card:hover .text {
     opacity: 1;
 }
 
-@media (max-width:991px) {
-    .osevents .card:hover .text .title h2{
-        transform: translate(-100px,-20px);
+.osevents .card:hover .layer {
+    width: 100%;
+}
+
+@media (max-width: 991px) {
+    .osevents .card:hover .text .title h2 {
+        transform: translate(-100px, -20px);
         cursor: pointer;
     }
-    .osevents .card:hover .text .title p{
-        transform: translate(-220px,-20px);
+
+    .osevents .card:hover .text .title p {
+        transform: translate(-220px, -20px);
     }
-    .osevents .card:hover .text .description{
+
+    .osevents .card:hover .text .description {
         opacity: 1;
         transform: translateX(-70px);
         position: relative;
     }
-    .osevents .card:hover .bt1{
+
+    .osevents .card:hover .bt1 {
         transform: translateX(-185px);
-        opacity: .8;
+        opacity: 0.8;
     }
 
-    .osevents .container{
+    .osevents .container {
         width: 97%;
     }
 }
+
 /* @media (max-width:767px) {
-} */
-@media (max-width:600px) {
-    .osevents .card .text .title h2{
+  } */
+@media (max-width: 600px) {
+    .osevents .card .text .title h2 {
         font-size: 40px;
     }
-    .osevents .card .text .title p{
+
+    .osevents .card .text .title p {
         font-size: 15px;
     }
-    .osevents .card .text .description p{
+
+    .osevents .card .text .description p {
         font-size: 9px;
         max-width: 50px;
         min-height: 600px;
         max-width: 100px;
     }
-    .osevents .card .bt1{
+
+    .osevents .card .bt1 {
         font-size: 14px;
     }
-    .osevents .card:hover .text .title h2{
-        transform: translate(-10px,-20px);
+
+    .osevents .card:hover .text .title h2 {
+        transform: translate(-10px, -20px);
         cursor: pointer;
     }
-    .osevents .card:hover .text .title p{
-        transform: translate(-110px,-20px);
+
+    .osevents .card:hover .text .title p {
+        transform: translate(-110px, -20px);
     }
-    .osevents .card:hover .text .description{
+
+    .osevents .card:hover .text .description {
         opacity: 1;
         transform: translateX(50px);
         position: relative;
     }
-    .osevents .card:hover .bt1{
-        transform: translateX(-65px);
-        opacity: .8;
-    }
 
+    .osevents .card:hover .bt1 {
+        transform: translateX(-65px);
+        opacity: 0.8;
+    }
 }
 
 /* End speakers Section */
-.events .container{
+.events .container {
     width: 85%;
 }
+
 .moataz_container {
     width: 100%;
     display: flex;
@@ -1950,9 +2020,9 @@ h3:hover {
 }
 
 /* button:hover{
-  background-color: #fff;
-  color: #fc097c;
-} */
+    background-color: #fff;
+    color: #fc097c;
+  } */
 @media screen and (min-width: 450px) and (max-width: 750px) {
     .row {
         /* flex: 49%; */
@@ -1975,19 +2045,22 @@ h3:hover {
     }
 
     /* button{
-      left: 320px;
-      width: 400px;
-      font-size: 20px;
-      margin-bottom: 50px;
-  } */
+        left: 320px;
+        width: 400px;
+        font-size: 20px;
+        margin-bottom: 50px;
+    } */
 }
-.event .image{
+
+.event .image {
     max-height: 100px;
     overflow: hidden;
 }
-.event .image img{
+
+.event .image img {
     max-height: 100%;
 }
+
 @media screen and (max-width: 450px) {
     .one>span {
         font-size: 33px;
@@ -2041,7 +2114,7 @@ h3:hover {
     text-align: center;
 }
 
-@media (min-width:767px) {
+@media (min-width: 767px) {
     .sponsers .content {
         grid-template-columns: repeat(4, minmax(130px, 160px));
     }
@@ -2295,7 +2368,6 @@ h3:hover {
         padding-right: 20px;
         padding-left: 10px;
         text-align: left;
-
     }
 
     .footer .subscirbe .sec .btn {
@@ -2309,7 +2381,6 @@ h3:hover {
     .footer .links ul li a {
         font-size: 16px;
     }
-
 }
 
 /* End Footer Section */
