--- a/css/index.css
+++ b/css/index.css
@@ -850,6 +850,7 @@ nav .icon span {
     flex: 0 0 25%;
     touch-action: pan-y;
 }
+
 .yasmeen-heads .filter .himg {
     min-width: 260px;
 }
@@ -1836,245 +1837,86 @@ nav .icon span {
     }
 }
 
-/* End speakers Section */
-.events .container {
-    width: 85%;
-}
-
-.moataz_container {
-    width: 100%;
+.osevents .content2 {
+    margin-top: 25px;
     display: flex;
-    position: relative;
-    flex-direction: column;
     flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
-    align-items: center;
-    padding-bottom: 40px;
 }
 
-.moataz_container .event {
-    min-width: 200px;
+.osevents .content2>* {
+    flex-basis: 200px;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
-.one {
-    text-wrap: nowrap;
-    margin-bottom: 60px;
-    padding: 10px;
-}
-
-.one>span {
-    font-size: 48px;
-    font-family: "Archivo", sans-serif;
-    font-weight: 700;
-    line-height: 60px;
-}
-
-.row {
-    box-sizing: border-box;
-    /* width: 1000px; */
+.osevents .content2 .card2 {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    row-gap: 35px;
-    flex-wrap: wrap;
-    column-gap: 10px;
-    flex: 1;
 }
 
-.row>div {
-    width: 23%;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    background-color: #fff;
-    position: relative;
-    height: 270px;
-    overflow: hidden;
-}
-
-.moataz_container img {
-    width: 100%;
-    border-radius: 4px;
-}
-
-.circle {
+.osevents .card2 .date {
     position: absolute;
-    top: 15px;
-    left: 15px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.653);
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    border: 1px solid #fff;
+    width: 45px;
+    height: 45px;
     text-align: center;
     justify-content: center;
-    padding: 6px;
-    font-size: 10px;
+    right: 5px;
+    top: 5px;
+    z-index: 2;
+    transition: .5s;
 }
 
-.circle>span>span {
+.osevents .card2 .date p {
+    margin: 0;
+}
+
+.osevents .card2 .date .day {
+    margin-top: 2px;
+    font-weight: 600;
     font-size: 20px;
-    font-family: "Archivo", sans-serif;
-    font-weight: 700;
-    line-height: 15px;
 }
 
-.mocontent {
-    height: 80px;
-    min-width: none;
-    /* position: relative; */
+.osevents .card2 .date .mon {
+    font-weight: 400;
+    font-size: 14px;
 }
 
-.mocontent>.art {
-    position: absolute;
-    left: 14px;
-    top: 140px;
-    font-size: 12px;
-    width: 80px;
-    height: 20px;
+.osevents .evimg {
+    border-radius: 5px;
     display: flex;
-    justify-content: center;
+    flex: 1;
     align-items: center;
-    border-radius: 4px;
-    font-family: "Archivo", sans-serif;
+    justify-content: center;    
 }
 
-.link_loc {
-    margin-top: 20px;
-}
-
-.link_loc>h3>a {
-    margin-left: 14px;
-    text-wrap: wrap;
-    color: inherit;
-    display: inline-block;
-    line-height: inherit;
-    text-decoration: none;
-}
-
-h3:hover {
-    color: #fc097c;
-}
-
-.link_loc>div>p {
-    font-size: 13px;
-    line-height: 12px;
-}
-
-.link_loc div {
-    margin-top: 10px;
-    margin-left: 14px;
-    display: flex;
-    gap: 7px;
-}
-
-.row>div img {
-    transition: 0.7s ease-in-out;
+.osevents .content2 img {
+    border-radius: 5px;
+    max-width: 100%;
     max-height: 100%;
+    object-fit: cover;
+    transition: .5s;
 }
 
-.row>div img:hover {
-    transform: scale(1.05);
+.osevents .content2 .card2:hover img {
+    transform: translateY(-10px) scale(1.04);
 }
 
-.three {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+.osevents .content2 .card2:hover .date {
+    transform: translateY(-10px) scale(1.04);
 }
 
-.three>button {
-    position: absolute;
-    background: #fc097c;
-    border: transparent solid;
-    color: #ffffff;
-    border-radius: 4px;
-    font-size: 16px;
-    font-weight: 700;
-    font-family: "Archivo", sans-serif;
-    height: 50px;
-    line-height: 50px;
-    padding: 0px 35px;
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-}
-
-/* button:hover{
-    background-color: #fff;
-    color: #fc097c;
-  } */
-@media screen and (min-width: 450px) and (max-width: 750px) {
-    .row {
-        /* flex: 49%; */
-        flex-wrap: wrap;
-        max-width: 1000px;
-        min-width: 200px;
-    }
-
-    .row>div {
-        min-width: 300px;
-        height: 240px;
-    }
-
-    .content {
-        position: relative;
-    }
-
-    .content>.art {
-        top: -35px;
-    }
-
-    /* button{
-        left: 320px;
-        width: 400px;
-        font-size: 20px;
-        margin-bottom: 50px;
-    } */
-}
-
-.event .image {
-    max-height: 100px;
-    overflow: hidden;
-}
-
-.event .image img {
-    max-height: 100%;
-}
-
-@media screen and (max-width: 450px) {
-    .one>span {
-        font-size: 33px;
-    }
-
-    .row {
-        flex: 100%;
-        flex-wrap: wrap;
-        max-width: 300px;
-        /* width: 80%; */
-        margin: 0px 30px;
-    }
-
-    .row>div {
-        width: 100%;
-        height: 300px;
-    }
-
-    .mocontent {
-        position: relative;
-    }
-
-    .mocontent>.art {
-        top: -35px;
-    }
-
-    button {
-        bottom: 10px;
-    }
+.osevents .content2 .title {
+    font-weight: 500;
+    padding: 5px;
+    text-transform: capitalize;
 }
 
 /* End Events Section */
 /* start Sponsers Section */
+
 .sponsers .content {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
@@ -2095,7 +1937,15 @@ h3:hover {
     text-align: center;
 }
 
+@media (min-width: 991px) {
+    .sponsers .container{
+        width: 85%;
+    }
+}
 @media (min-width: 767px) {
+    .sponsers .container{
+        width: 95%;
+    }
     .sponsers .content {
         grid-template-columns: repeat(4, minmax(130px, 160px));
     }
