--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,11 @@ body {
 html {
     scroll-behavior: smooth;
 }
-
+body.active{
+    width: 100vw;
+    position: fixed !important;
+    overflow-y: scroll !important;
+}
 .container {
     padding-left: 15px;
     padding-right: 15px;
@@ -113,9 +117,10 @@ body {
 /* End Components */
 /* Header section */
 .bigheader {
-    background-image: url(../imgs/back2.png);
+    background-image: url(../imgs/back2.jpg);
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     background-attachment: fixed;
     position: relative;
     z-index: 0;
@@ -377,18 +382,20 @@ nav .icon span {
 
     nav .links ul {
         position: absolute;
-        top: 105%;
+        top: 95%;
         left: 110%;
-        width: 100%;
+        width: 80%;
         /* transform: translateX(110%); */
         height: calc(100vh - 100px);
-        display: block;
         text-align: center;
         padding-top: 2rem;
         background-color: var(--secondary-color);
         transition: transform 1s;
         padding-left: 0;
         border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
     }
 
     nav ul::before {
@@ -421,6 +428,8 @@ nav .icon span {
     /*  */
     nav .links.active ul {
         transform: translateX(-114%);
+        height: 90vh;
+
     }
 
     nav ul .eve {
@@ -443,8 +452,8 @@ nav .icon span {
     nav li a {
         width: 100%;
         padding: 10px 7px;
-        font-size: 15px;
-        font-weight: 200;
+        font-size: 17px;
+        font-weight: 400;
         transition-duration: 0.2s;
         margin: 0;
     }
@@ -483,6 +492,9 @@ nav .icon span {
 }
 
 @media (max-width: 480px) {
+    .bigheader{
+    background-attachment: unset;
+    }
     nav ul {
         right: -25px;
         top: 40px;
@@ -816,13 +828,6 @@ nav .icon span {
     transition: all 1s ease;
     filter: none;
 }
-
-/* .yasmeen-heads ul {
-    text-decoration: none;
-    display: flex;
-    list-style: none;
-  } */
-
 .ytitle2 {
     padding-top: 50px;
     font-weight: bold;
@@ -833,12 +838,15 @@ nav .icon span {
 .yasmeen_container2 {
     /* background-color: red; */
     position: relative;
+    display: none;
+}
+.about{
+    overflow: hidden;
 }
 
 .yasmeen-heads {
     overflow: hidden;
     width: 85%;
-    margin: auto;
 }
 
 .yasmeen-heads .heads-slides {
@@ -870,11 +878,6 @@ nav .icon span {
 }
 
 .shapelines {
-    /* position: absolute;
-     right: 10px;
-     bottom: 30%;
-     z-index: -1;
-     animation: round-01 5s linear infinite; */
     display: none;
 }
 
@@ -1850,7 +1853,6 @@ nav .icon span {
     flex-grow: 1;
     flex-shrink: 1;
 }
-
 .osevents .content2 .card2 {
     position: relative;
 }
